--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.7",
+    "dot": "^1.1.3",
+    "dotenv": "^16.4.5",
+    "env": "^0.0.2",
     "express": "^4.18.3",
     "nodemon": "^3.1.0"
   }
