--- a/package.json
+++ b/package.json
@@ -5,15 +5,13 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node server.js"
+    "dev": "nodemon server.js"
   },
   "author": "mohana vamsi",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.7",
-    "dot": "^1.1.3",
     "dotenv": "^16.4.5",
-    "env": "^0.0.2",
     "express": "^4.18.3",
     "nodemon": "^3.1.0"
   }
